--- a/fashionApp/templates/pay.html
+++ b/fashionApp/templates/pay.html
@@ -8,6 +8,7 @@
         <div class="row">
             <button id="rzp-button1" class="btn btn-secondary text-dark w-100" style="border:none">Pay</button>
         </div>
+    <p class="text-center fw-bold my-4">Kindly enable popup  for further payment !!!</p>
     </div>
     <script src="http://checkout.razorpay.com/v1/checkout.js"></script>
     <script>
@@ -20,7 +21,7 @@
                 // alert(response.razorpay_payment_id);
                 // alert(response.razorpay_order_id);
                 // alert(response.razorpay_signature)
-                window.open("/paymentSuccess/"+response.razorpay_payment_id+"/"+response.razorpay_order_id+"/"+response.razorpay_signature+"/"+checkid+"/")
+                window.open("/paymentSuccess/"+response.razorpay_payment_id+"/"+response.razorpay_order_id+"/"+response.razorpay_signature+"/{{checkid}}/")
 
             },
             "prefill":{
