--- a/fashionApp/templates/pay.html
+++ b/fashionApp/templates/pay.html
@@ -25,9 +25,9 @@
 
             },
             "prefill":{
-                "name":"{{user.name}}",
-                "email":"{{user.email}}",
-                "contact":"{{user.phone}}"
+                "name":"{{User.name}}",
+                "email":"{{User.email}}",
+                "contact":"{{User.phone}}"
             },
             "notes":{
                 "address":"Razorpay Coporate Office"
