--- a/fashionApp/templates/pay.html
+++ b/fashionApp/templates/pay.html
@@ -1,58 +1,56 @@
 {% extends 'index.html' %}
 {% load static %}
 {% block title %}
-    <title>Fashion-world|Pay</title>
-    {% endblock %}
-    {% block body %}
-    <div class="container p-3 mt-3 mb-3">
-        <div class="row">
-            <button id="rzp-button1" class="btn btn-secondary text-dark w-100" style="border:none">Pay</button>
-        </div>
-    <p class="text-center fw-bold my-4">Kindly enable popup  for further payment !!!</p>
-    </div>
-    <script src="http://checkout.razorpay.com/v1/checkout.js"></script>
-    <script>
-        var options={
-            "key":"{{api_key}}", //enter the key id generated form the dashboard
-            "name":"FashionWorld",
-            "description":"Test Transiction",
-            "order_id":"{{order_id}}", //this is sample order id. pass the id obtained 
-            "handler":function (response){
-                // alert(response.razorpay_payment_id);
-                // alert(response.razorpay_order_id);
-                // alert(response.razorpay_signature)
-                window.open("/paymentSuccess/"+response.razorpay_payment_id+"/"+response.razorpay_order_id+"/"+response.razorpay_signature+"/{{checkid}}/")
+<title>FashionWorld | Payment</title>
+{% endblock %}
+{% block body %}
+<div class="container p-3 mt-3 mb-3 ">
+  <div class="row justify-content-center" >
+    <button id="rzp-button1" class="btn btn-primary bton2 text-dark w-25" style="border: none;">Pay</button>
+  </div>
 
-            },
-            "prefill":{
-                "name":"{{User.name}}",
-                "email":"{{User.email}}",
-                "contact":"{{User.phone}}"
-            },
-            "notes":{
-                "address":"Razorpay Coporate Office"
-            },
-            "theme":{
-                "color":"#3399cc"
-            }
+  <p class="text-center fw-bold my-4">Kindly enable popup  for further payment !!!</p>
+</div>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script>
+  var options = {
+    "key": "{{api_key}}", // Enter the Key ID generated from the Dashboard
+    "name": "Ecart",
+    "description": "Test Transaction",
+    "order_id": "{{order_id}}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+    "handler": function (response) { 
+      // alert(response.razorpay_payment_id);
+      // alert(response.razorpay_order_id);
+      // alert(response.razorpay_signature)
+      window.open("/paymentSuccess/"+response.razorpay_payment_id+"/"+response.razorpay_order_id+"/"+response.razorpay_signature+"/{{checkid}}/")
+    },
+    "prefill": { 
+      "name": "{{User.name}}",
+      "email": "{{User.email}}",
+      "contact": "{{User.phone}}"
+    },
+    "notes": {
+      "address": "Razorpay Corporate Office"
+    },
+    "theme": {
+      "color": "#3399cc"
+    }
+  };
+  var rzp1 = new Razorpay(options);
+  rzp1.on('payment.failed', function (response) {
+    // alert(response.error.code);
+    // alert(response.error.description);
+    // alert(response.error.source);
+    // alert(response.error.step);
+    // alert("Your Payment is Failed");
+    // alert(response.error.metadata.order_id);
+    // alert(response.error.metadata.payment_id);
+    window.open("/checkout/")
+  });
+  document.getElementById('rzp-button1').onclick = function (e) {
+    rzp1.open();
+    e.preventDefault();
+  }
+</script>
 
-        };
-        var rzp1=new Razorpay(options);
-        rzp1.on('payment.failed',function(response){
-            // alert(response.error.code)
-            // alert(response.error.description)
-            // alert(response.error.source)
-            // alert(response.error.step)
-            // alert("your payment is failed")
-            // alert(response.error.meta_data.order_id)
-            // alert(response.error.meta_data.payment_id)
-            window.open("/checkout/")
-        });
-        document.getElementById('rzp-button1').onclick= function(e){
-            rzp1.open();
-            e.preventDefault();
-        }
-    </script>
-    {% endblock %}
-
-    
+{% endblock %}
