--- a/fashionApp/templates/pay.html
+++ b/fashionApp/templates/pay.html
@@ -15,7 +15,7 @@
 <script>
   var options = {
     "key": "{{api_key}}", // Enter the Key ID generated from the Dashboard
-    "name": "Ecart",
+    "name": "FashionWorld",
     "description": "Test Transaction",
     "order_id": "{{order_id}}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
     "handler": function (response) { 
