--- a/fashionApp/templates/index.html
+++ b/fashionApp/templates/index.html
@@ -61,12 +61,8 @@
                         <li class="nav-item active">
                            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                         </li>
-                       <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pages <span class="caret"></span></a>
-                           <ul class="dropdown-menu">
-                              <li><a href="/about/">About</a></li>
-                              <li><a href="/testimonial/"> Testimonial</a></li>
-                           </ul>
+                       <li class="nav-item dropdown">   
+                           <a href="/testimonial/"> Testimonial</a> 
                         </li>
                         <li class="nav-item">
                            <a class="nav-link" href="/product/All/All/All/">Products</a>
@@ -372,7 +368,7 @@
                            Fast Delivery
                         </h5>
                         <p>
-                           variations of passages of Lorem Ipsum available
+                           We provide the fastest delivery The sooner you order the faster you get.
                         </p>
                      </div>
                   </div>
@@ -487,7 +483,7 @@
                            Free Shiping
                         </h5>
                         <p>
-                           variations of passages of Lorem Ipsum available
+                          Get free delivery on your first three order!!! Dont miss the chance.... 
                         </p>
                      </div>
                   </div>
@@ -508,7 +504,7 @@
                            Best Quality
                         </h5>
                         <p>
-                           variations of passages of Lorem Ipsum available
+                           we provide best Quality because customer satisfaction is our only concern.
                         </p>
                      </div>
                   </div>
@@ -533,7 +529,7 @@
                         </h2>
                      </div>
                      <p style="margin-top: 20px;margin-bottom: 30px;">
-                        Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
+                        New Clothes,New Passion.Discover The New You.
                      </p>
                      <a href="">
                      Shop Now
