--- a/fashionApp/templates/product.html
+++ b/fashionApp/templates/product.html
@@ -142,7 +142,8 @@
               <!-- Color Start -->
               <h5 class="section-title position-relative text-uppercase mb-3  red"><span class="bg-light pr-3">Filter</span>by color</h5>
               <div class="bg-light p-4 mb-3">
-                  <form>
+               <form action="/color-filter/{{mc}}/{{sc}}/{{br}}/" method="post">
+                  {% csrf_token %}
                       <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                           <input type="checkbox" class="custom-control-input" checked id="color-all">
                           <label class="custom-control-label" for="price-all">All Color</label>
@@ -173,6 +174,9 @@
                           <label class="custom-control-label" for="color-5">Green</label>
                           <!-- <span class="badge border font-weight-normal">168</span> -->
                       </div>
+                      <div class="my-3">
+                        <button type="submit" class="btn btn-light btn-sm w-100 bg-danger">Apply Filter</button>
+                    </div>
                   </form>
               </div>
               <!-- Color End -->
